Pull local/view state (selected room) up to top-level Chat component

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@ body {
   background-color: #EEE;
   border: 1px solid #CCC;
 }
-.selected {
-  color: red;
+
+.selectable-list li:hover {
+  background-color: #DDD;
+}
+.selectable-list .selected,
+.selectable-list .selected:hover {
+  background-color: #CCC;
 }
