in message: resolve user name; style; cravenly (in render) select 1st selectable when nothing selected

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,9 @@ body {
 .selectable-list .selected:hover {
   background-color: #CCC;
 }
+.message .from {
+  font-size: 120%;
+}
+.message .when {
+  font-size: 60%;
+}
