--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,15 @@ body {
 .selectable-list .selected:hover {
   background-color: #CCC;
 }
+
+.user-detail {
+  border-top: 1px solid #DDD;
+  margin-bottom: 0.5em;
+}
+.user-detail .email {
+  font-size: 80%;
+}
+
 .message {
   border-top: 1px solid #DDD;
   /*border-left: 2px solid #DDD;*/
